test/langtools/tools/javac/valhalla/lworld-values/IllegalByValueTest2.out
IllegalByValueTest2.java:19:30: compiler.err.duplicate.annotation.missing.container: IllegalByValueTest2.Annot
IllegalByValueTest2.java:19:59: compiler.err.concrete.supertype.for.primitive.class: compiler.misc.anonymous.class: IllegalByValueTest2$1, IllegalByValueTest2
2 errors
